tests/fail/incorrect_fmt_string.rs
#[log_attributes::log(info, "} oh no {")]
fn incorrect_fmt_string() {}

fn main() {}
