tests/fail/incorrect_fmt_string.stderr
error: invalid format string: unmatched `}` found
 --> tests/fail/incorrect_fmt_string.rs:1:30
  |
1 | #[log_attributes::log(info, "} oh no {")]
  |                              ^ unmatched `}` in format string
  |
  = note: if you intended to print `}`, you can escape it using `}}`
